FIXED ALIGNMENT ISSUE!!! And removed redundant class and import ResultsPage. Apparently it was an issue in CSS with both components having identical className. I would guess these are shared over multiple css files. Still doesn't make sense to me though.

--- a/src/styles/SearchPage.css
+++ b/src/styles/SearchPage.css
@@ -76,10 +76,14 @@
 }
 
 .Cards {
-  width: auto;
   margin-left: 5vh;
   margin-right: 5vh;
   justify-content: center;
+  clear: both;
+  align-items: center;
+  text-align: center;
+  color: red;
+  align-self: center;
 }
 
 .Cards p:hover {
